[workspace]
resolver = "2"
members = [
  "crates/graph-collections",
  "crates/graph-core",
  "crates/graph-traversal",
  "crates/graph-shortest-path",
  "crates/graph-spanning",
  "crates/graph-flow",
  "crates/graph-advanced",
  "crates/graph",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Chaganti-Reddy/graph-rs"

[package]
name = "graph-rs"
version.workspace = true
edition.workspace = true

[dependencies]
