[package]
name = "graph-collections"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Low-level collections for graph-rs: Stack, Queue, Heap, DisjointSet"
keywords    = ["graph", "data-structures", "stack", "queue", "heap"]
categories  = ["data-structures", "algorithms"]
readme       = "../../README.md"

[features]
default = []

[dependencies]
