[package]
name = "graph-traversal"
description = "Graph traversal algorithms for graph-rs: DFS, BFS, topological sort, cycle detection, connected components, bipartite check"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords   = ["graph", "bfs", "dfs", "topological-sort", "algorithms"]
categories = ["algorithms", "data-structures"]
readme       = "../../README.md"

[dependencies]
graph-collections = { path = "../graph-collections" }
graph-core        = { path = "../graph-core" }
