[package]
name = "graph"
description = "A complete graph algorithm library: data structures, traversal, shortest paths, spanning trees, flow, and advanced algorithms"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["graph", "algorithms", "dijkstra", "scc", "flow"]
categories = ["algorithms", "data-structures"]
readme = "../../README.md"

[dependencies]
graph-collections   = { path = "../graph-collections" }
graph-core          = { path = "../graph-core" }
graph-traversal     = { path = "../graph-traversal" }
graph-shortest-path = { path = "../graph-shortest-path" }
graph-spanning      = { path = "../graph-spanning" }
graph-flow          = { path = "../graph-flow" }
graph-advanced      = { path = "../graph-advanced" }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest  = "1"
rand      = "0.8"

[[bench]]
name    = "bfs"
harness = false

[[bench]]
name    = "dijkstra"
harness = false

[[bench]]
name    = "kruskal"
harness = false

[[bench]]
name    = "floyd_warshall"
harness = false
